--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,10 +21,9 @@
     "strict": true
   },
   "include": [
-    "@types/**/*",
-    "src/**/*"
+    "src"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules","types"
   ]
 }
